# BLE-GYATT

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6
docs/: battery_plan.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/include/: common.h  gap.h  gatt_svc.h  sensor.h  sensor_task.h  subas_handler.h
main/src/: gap.c  gatt_svc.c  sensor_dht22.c  sensor_mock.c  sensor_task.c  subas_handler.c
